# templates

atcoder.hs/: LICENSE  main.cabal  stack.yaml
atcoder.hs/src/: Main.hs
cf.cpp/: c++.cpp  note.txt
cf.scala/: .gitignore  Main.scala
clean.makefile/: Makefile
contest.hs/: main
contest.rs/: Makefile
cpp.makefile/: Makefile
gcj.cpp/: Makefile
scala.makefile/: Makefile
tex/: Makefile  a.tex
tex.makefile/: Makefile
