name:                main
version:             0.1.0.0
synopsis:            Atcoder problem
description:         Atcoder problem
homepage:            https://github.com/mkut/templates
license:             BSD3
license-file:        LICENSE
author:              Mirai Towa
maintainer:          mkut.at@gmail.com
copyright:           Copyright: (c) 2016 mkut
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable main
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , milib
